# AlphaVantage_Rust

./: .env.test  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  Makefile  README.md  diesel.toml
.github/actions/: push_pull.yml
data/: other-listed.csv
data/testing/: digital_currency_list.csv  nasdaq-listed_csv.csv  nyse-listed.csv  other-listed.csv
dev_database/: .env  01_create_db.sql  README.md  docker-compose.yaml
migrations/2023-06-27-225653_symbols/: down.sql  up.sql
migrations/2023-07-24-035754_overview/: down.sql  up.sql
migrations/2023-09-24-210206_intraday/: down.sql  up.sql
migrations/2023-10-01-154107_summary/: down.sql  up.sql
migrations/2023-10-01-205350_activity/: down.sql  up.sql
migrations/2023-10-05-234248_topicrefs/: down.sql  up.sql
migrations/2023-10-09-231232_authors/: down.sql  up.sql
migrations/2023-10-10-022021_newsroot/: down.sql  up.sql
migrations/2023-10-11-025757_feed_table/: down.sql  up.sql
migrations/2023-10-11-031146_author_map/: down.sql  up.sql
migrations/2023-10-11-035906_ticker_sentiments/: down.sql  up.sql
migrations/2023-10-14-174017_topic_map/: down.sql  up.sql
migrations/2024-02-24-201337_amend_topstats/: down.sql  up.sql
migrations/2024-02-24-210742_amend_topstats2/: down.sql  up.sql
migrations/2024-05-08-141640_db_refactoring00/: down.sql  up.sql
migrations/2024-05-12-230843_db_refactoring01/: down.sql  up.sql
migrations/2024-05-18-002050_db_status/: down.sql  up.sql
migrations/2024-08-25-003017_rem_uniq_from_topstats/: down.sql  up.sql
migrations/2024-08-25-044649_add_topstat_cons/: up.sql
migrations/2024-10-08-005616_overview_width_changes/: down.sql  up.sql
src/: alpha_lib.rs  datatypes.rs  db_funcs.rs  db_models.rs  dbfunctions.rs  file_processors.rs  lib.rs  macros.rs  schema.rs  security_types.rs  util.rs
src/alpha_lib/: alpha_data_types.rs  alpha_funcs.rs  alpha_io.rs  alpha_io_funcs.rs  core.rs  macros.rs  misc_functions.rs  news_type.rs
src/datatypes/: data_file_types.rs
src/dbfunctions/: articles.rs  (+19 more)
test_database/: .env  01_create_db.sql  README.md  docker-compose.yaml  test_alpha_docker_file
tests/: GLW_query.json  news_tests.rs
(+9 files in other folders)
