[package]
name = "AlphaVantage_Rust"
version = "0.1.0"
edition = "2021"
authors = ["Dwight Browne <dwight@dwightjbrowne.com>"]
description = "Rust Alphavantage API to Postgres"
license = "MIT"
repository = "https://github.com/dwightbrowne/AlphaVantage_Rust"
readme = "README.md"
keywords = [ "Alphavantage", "postgres"]
categories = ["database", "finance"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.4", features = ["postgres", "chrono", "uuid"] }
dotenvy = "0.15.7"
lazy_static = "1.4.0"
serde = {version =  "1.0.159", features = ["derive"]}
csv = "1.2.1"
chrono = {version="0.4.19", features = ["serde"]}
reqwest = { version = "0.11.6", features = ["blocking","json"] }
serde_json = "1.0.84"
uuid = {version ="1.3.3", features = ["serde", "v4"]}
chrono-tz = "0.8.3"
serde_with= { version = "3.3.0", features = [] }
ring = { version = "0.17.3", features = [] }