[package]
name = "alpha_vantage_rust"
version = "0.1.0"
edition = "2021"
authors = ["Dwight Browne <dwight@dwightjbrowne.com>"]
description = "Rust Alphavantage API to Postgres"
license = "MIT"
repository = "https://github.com/dwightbrowne/alpha_vantage_rust"
readme = "README.md"
keywords = ["Alphavantage", "postgres"]
categories = ["database", "finance"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.4.3"
bincode = "1.3.3"
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = "0.8.3"
crc = "3.2.1"
crc32fast = "1.4.0"
csv = "1.2.1"
diesel = { version = "2.0.4", features = ["postgres", "chrono", "uuid"] }
dotenvy = "0.15.7"
indicatif = "0.17.8"
lazy_static = "1.4.0"
reqwest = { version = "0.11.6", features = ["blocking","json"] }
ring = { version = "0.17.3", features = [] }
serde = { version = "1.0.159", features = ["derive"] }
serde_derive = "1.0.159"
serde_json = "1.0.84"
serde_with = { version = "3.3.0", features = [] }
uuid = { version = "1.3.3", features = ["serde", "v4"] }
